--- a/src/app/events/calendar/calendar.component.html
+++ b/src/app/events/calendar/calendar.component.html
@@ -24,7 +24,7 @@
       </mat-button-toggle-group>
     </mat-grid-tile>
     <mat-grid-tile>
-      <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
+      <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'bg' }}</h3>
     </mat-grid-tile>
     <mat-grid-tile>
       <mat-button-toggle-group>
