--- a/src/app/events/calendar/calendar.component.css
+++ b/src/app/events/calendar/calendar.component.css
@@ -1,7 +1,12 @@
 h3 {
   margin: 0 0 10px;
 }
-
+.h3, h3 {
+  font-size: 1.75rem
+}
+h3::first-letter{
+  text-transform: uppercase;
+}
 pre {
   /*background-color: #f5f5f5;*/
   padding: 15px;
@@ -10,10 +15,9 @@ pre {
 .text-center {
   text-align: center !important
 }
-.h3, h3 {
-  font-size: 1.75rem
-}
+
 
 .basic-container {
   padding: 30px;
 }
+
