--- a/src/app/events/calendar/calendar.component.html
+++ b/src/app/events/calendar/calendar.component.html
@@ -47,6 +47,7 @@
     </mat-grid-tile>
   </mat-grid-list>
   <br/>
+  <br/>
   <div [ngSwitch]="view">
     <!--suppress TypeScriptValidateTypes -->
     <mwl-calendar-month-view
@@ -84,4 +85,6 @@
     >
     </mwl-calendar-day-view>
   </div>
+  <div><span class="dot vacantion"></span>Отпуск <span class="dot holidays"></span>Празници <span class="dot sick"></span>Болничен <span class="dot home"></span>Работa от вкъщи</div>
+
 </div>
