--- a/src/app/events/calendar/calendar.component.css
+++ b/src/app/events/calendar/calendar.component.css
@@ -1,12 +1,15 @@
 h3 {
   margin: 0 0 10px;
 }
+
 .h3, h3 {
   font-size: 1.75rem
 }
-h3::first-letter{
+
+h3::first-letter {
   text-transform: uppercase;
 }
+
 pre {
   /*background-color: #f5f5f5;*/
   padding: 15px;
@@ -21,3 +24,23 @@ pre {
   padding: 30px;
 }
 
+.dot {
+
+  border-radius: 50%;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 2px;
+}
+.home{
+  background-color: rgb(233, 212, 20);
+}
+.sick{
+  background-color: rgb(208, 6, 30);
+}
+.vacantion{
+  background-color: rgb(30, 144, 255);
+}
+.holidays{
+  background-color: rgb(64, 255, 30);
+}
