--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -17,9 +17,19 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <a routerLink="/home"><img src="assets/images/logo-white-wheat.webp" alt="" class="logo"></a>
-      <p>User is logged: {{(isLogged$ | async)}}</p>
+      <p>User is logged: {{(isLogged$ | async)}}  </p>
+      <p>--Hello: {{(user$["firstName"] | async)}}</p>
       <app-action-button></app-action-button>
     </mat-toolbar>
-    <router-outlet></router-outlet>
+<!--    <ng-template #content>-->
+      <router-outlet></router-outlet>
+<!--    </ng-template>-->
   </mat-sidenav-content>
 </mat-sidenav-container>
+
+
+<!--<ng-template #loading>-->
+<!--  <div>LOADING...</div>-->
+<!--</ng-template>-->
+
+<!--<ng-container *ngTemplateOutlet="(isReady$ | async) ? content : loading"></ng-container>-->
