--- a/src/app/events/add-event/add-event.component.html
+++ b/src/app/events/add-event/add-event.component.html
@@ -1,7 +1,7 @@
 <!--
 Common: description, from, to
 Sick: replacement,
-Vacantion: replacement,
+Vacation: replacement,
 homeOffice:
  -->
 
@@ -18,7 +18,9 @@ homeOffice:
         <mat-form-field appearance="fill" class="full-width form-group">
           <mat-label>Въведете период</mat-label>
           <mat-date-range-input [rangePicker]="picker2">
+            <label for="from"></label>
             <input matStartDate placeholder="Start date" #from="ngModel" id="from" name="from" ngModel required>
+            <label for="to"></label>
             <input matEndDate placeholder="End date" #to="ngModel" id="to" name="to" ngModel required>
           </mat-date-range-input>
           <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
@@ -35,7 +37,7 @@ homeOffice:
           <mat-label>Събитие</mat-label>
           <mat-select class="select" #event="ngModel" id="event" name="event" ngModel required
                       (closed)="categorySelect(event.value)">
-            <mat-option *ngFor="let category of categorys" [value]="category['value']" class="select">
+            <mat-option *ngFor="let category of categories" [value]="category['value']" class="select">
               {{category.text}}
               <mat-divider></mat-divider>
             </mat-option>
@@ -46,7 +48,7 @@ homeOffice:
         </mat-form-field>
         <mat-form-field appearance="fill" class="form-group full-width" *ngIf="hide">
           <mat-label>Заместник</mat-label>
-          <mat-select class="select" #event="ngModel" id="replacment" name="replacment" ngModel required *ngIf="hide">
+          <mat-select class="select" #event="ngModel" id="replacement" name="replacement" ngModel required *ngIf="hide">
             <mat-option *ngFor="let user of users" [value]="user['_id']" class="select">
               {{user["firstName"]}} {{user["lastName"]}}
               <mat-divider></mat-divider>
