--- a/src/app/events/calendar/calendar.component.css
+++ b/src/app/events/calendar/calendar.component.css
@@ -38,7 +38,7 @@ pre {
 .sick{
   background-color: rgb(208, 6, 30);
 }
-.vacantion{
+.vacation{
   background-color: rgb(30, 144, 255);
 }
 .holidays{
