--- a/src/app/events/calendar/calendar.component.html
+++ b/src/app/events/calendar/calendar.component.html
@@ -85,6 +85,6 @@
     >
     </mwl-calendar-day-view>
   </div>
-  <div><span class="dot vacantion"></span>Отпуск <span class="dot holidays"></span>Празници <span class="dot sick"></span>Болничен <span class="dot home"></span>Работa от вкъщи</div>
+  <div><span class="dot vacation"></span>Отпуск <span class="dot home"></span>Работa от вкъщи  <span class="dot sick"></span>Болничен <span class="dot holidays"></span>Празници</div>
 
 </div>
