--- a/src/app/events/details/details.component.html
+++ b/src/app/events/details/details.component.html
@@ -53,12 +53,12 @@
 </section>
 
 <ng-template #yes>
-  <span class="dot vacantion">
-    <mat-icon>thumb_up_alt</mat-icon>
+  <span class="dot vacation">
+   <mat-icon class="icon-approve" color="accent">thumb_up_alt</mat-icon>
   </span>
 </ng-template>
 <ng-template #no>
 
-    <mat-icon class="icon-approve" color="accent">thumb_up_alt</mat-icon>
+    <mat-icon class="icon-approve" color="accent">thumb_down_alt</mat-icon>
 
 </ng-template>
