--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -18,7 +18,7 @@
       </button>
       <a routerLink="/home"><img src="assets/images/logo-white-wheat.webp" alt="" class="logo"></a>
       <p>User is logged: {{(isLogged$ | async)}}  </p>
-      <p>--Hello: {{(user$["firstName"] | async)}}</p>
+<!--      <p>&#45;&#45;Hello: {{user.firstName}}</p>-->
       <app-action-button></app-action-button>
     </mat-toolbar>
 <!--    <ng-template #content>-->
