--- a/src/app/shared/loading/loading-dialog/loading-dialog.component.html
+++ b/src/app/shared/loading/loading-dialog/loading-dialog.component.html
@@ -1,6 +1,6 @@
-<h1 mat-dialog-title>Loading data</h1>
-<div mat-dialog-content>
-  Please have a moment of patience
+<h1 mat-dialog-title>Зареждане на данни</h1>
+<div>
+  Моля, имайте малко търпение  🧶 🙂
 </div>
 <div mat-dialog-actions>
   <div class="loading-spinner">
