--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -3,12 +3,12 @@
 <ng-template #notLogged>
   <p>guest works!</p>
   <div>user: {{(user$ | async) | json}}</div>
-  <div>loged: {{(isLogged$ | async) | json}}</div>
+  <div>logged: {{(isLogged$ | async) | json}}</div>
   <div>ready: {{(isReady$ | async) | json}}</div>
 </ng-template>
 <ng-template #logged>
   <p>home works!</p>
   <div>user: {{(user$ | async) | json}}</div>
-  <div>loged: {{(isLogged$ | async) | json}}</div>
+  <div>logged: {{(isLogged$ | async) | json}}</div>
   <div>ready: {{(isReady$ | async) | json}}</div>
 </ng-template>
